Adding support for TestNG: 1) New testngtests target which is called by tigertests. 2) New build properties in project.properties specific to TestNG. 3) Paths to JUnit 3.8 and 4.4 JARs are no longer hard coded.
git-svn-id: https://src.springframework.org/svn/spring-maintenance/trunk@14835 fd5a2b45-1f63-4059-99e9-3c7cb7fd75c8